menu shortly visible after initial  loading page bug

--- a/src/components/widgets/slideMenu.css
+++ b/src/components/widgets/slideMenu.css
@@ -5,6 +5,8 @@
     height: 100vh;
     top: 0px;
     z-index: 10;
+    left: -100vw;
+
 }
 
 #linksArea {
